Profile and home html uptade

--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -8,113 +8,123 @@
 </head>
 <body>
    <!-- Navbar -->
-   <nav class="navbar navbar-expand-lg bg-danger navbar-dark">
-        <div class="container">
-            <p class="container" style="font-size: 10px; color: #FFFFFF; font-weight: 550;  margin-top: 15px;"><a href="/" class="navbar-brand"> Bağış Yuvası</a></p>
+   <nav class="navbar navbar-expand-lg bg-primary navbar-dark">
+
+    <div class="container d-flex justify-content-between align-items-center">
+        <div>
+            <p style="font-size: 1px; color: #FFFFFF; font-weight: 550; margin-top: 15px;"><a href="/" class="navbar-brand">Bağış Yuvası</a></p>
         </div>
-        <div href="/home" style="display: flex; align-items: center;">
-            <svg  width="25" height="25" viewBox="0 0 33 30" xmlns="http://www.w3.org/2000/svg" fill="#FFFFFF">
-                <path  d="M12.9091 28.1987V19.1924H20.0829V28.1987C20.0829 29.1894 20.89 30 21.8764 30H27.2568C28.2432 30 29.0503 29.1894 29.0503 28.1987V15.5899H32.0992C32.9241 15.5899 33.3187 14.5632 32.691 14.0228L17.6976 0.459321C17.0161 -0.153107 15.9759 -0.153107 15.2944 0.459321L0.301036 14.0228C-0.308741 14.5632 0.067886 15.5899 0.892879 15.5899H3.94177V28.1987C3.94177 29.1894 4.74883 30 5.73523 30H11.1156C12.102 30 12.9091 29.1894 12.9091 28.1987Z"></path>
+        <svg  width="70" height="70" viewBox="0 0 30 30" xmlns="http://www.w3.org/2000/svg" fill="#FFFFFF">
+            <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="white" class="bi bi-house-door-fill" viewBox="0 0 15 15">
+                <path d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5"/>
             </svg>
+        </svg>
             <p class="container" style="font-size: 10px; color: #FFFFFF; font-weight: 550;  margin-top: 15px;"><a href="/home" class="navbar-brand"> Ana sayfa</a></p>
-        </div>
-        <div class="container">
-            <p class="container" style="font-size: 10px; color: #FFFFFF; font-weight: 550;  margin-top: 15px; "><a href="/error" class="navbar-brand"> Bağış kurumları</a></p>
-        </div>
-        <div class="container">
-            <p class="container" style="font-size: 10px; color: #FFFFFF; font-weight: 550;  margin-top: 15px; margin-right: 750px;"><a href="/error" class="navbar-brand"> İletişim</a></p>
-        </div>
-        <div class="container d-flex justify-content-start">
-            <button type="button" class="btn btn-light position-relative" style="background-color: #ffffff; border: 1px solid #ffffff;">
-                <a href="profile" class="navbar-brand text-dark"> Profil </a>
+        <svg xmlns="http://www.w3.org/2000/svg" width="70" height="70" fill="white" class="bi bi-box2-heart-fill me-2" viewBox="0 0 16 16">
+            <path d="M3.75 0a1 1 0 0 0-.8.4L.1 4.2a.5.5 0 0 0-.1.3V15a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1V4.5a.5.5 0 0 0-.1-.3L13.05.4a1 1 0 0 0-.8-.4zM8.5 4h6l.5.667V5H1v-.333L1.5 4h6V1h1zM8 7.993c1.664-1.711 5.825 1.283 0 5.132-5.825-3.85-1.664-6.843 0-5.132"/>
+        </svg>
+            <p class="container" style="font-size: 10px; color: #FFFFFF; font-weight: 550;  margin-top: 15px;"><a href="/error" class="navbar-brand">Bağış kurumları</a></p>
+        <svg xmlns="http://www.w3.org/2000/svg" width="70" height="70" fill="white" class="bi bi-envelope-arrow-up-fill me-2" viewBox="0 0 16 16">
+            <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414zM0 4.697v7.104l5.803-3.558zm.192 8.159 6.57-4.027L8 9.586l1.239-.757.367.225A4.49 4.49 0 0 0 8 12.5c0 .526.09 1.03.256 1.5H2a2 2 0 0 1-1.808-1.144M16 4.697v4.974A4.5 4.5 0 0 0 12.5 8a4.5 4.5 0 0 0-1.965.45l-.338-.207z"/>
+            <path d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7m.354-5.354 1.25 1.25a.5.5 0 0 1-.708.708L13 12.207V14a.5.5 0 0 1-1 0v-1.717l-.28.305a.5.5 0 0 1-.737-.676l1.149-1.25a.5.5 0 0 1 .722-.016"/>
+        </svg>
+            <p class="container" style="font-size: 10px; color: #FFFFFF; font-weight: 550;  margin-top: 15px;"><a href="/error" class="navbar-brand"> İletişim</a></p>        
+    </div>
+    
+</div>
+        <div class="container d-flex justify-content-end align-items-center">
+            <a href="profile" class="btn btn-light position-relative" style="background-color: #ffffff; border: 2px solid #ffffff; padding: 8px 10px;">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 20 20">
+                    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
+                    <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
+                </svg>
+                <span class="navbar-brand text-dark" style="margin-top: 10px;">Profil</span>
                 <span class="position-absolute top-0 start-100 translate-middle p-2 bg-success border border-light rounded-circle">
-                    <span class="visually-hidden">New alerts</span>
+                    <span class="visually-hidden">Yeni bildirimler</span>
                 </span>
-            </button>
+            </a>
         </div>
    </nav>
     
    <!-- Yorum ekleme formu -->
-<div class="container mt-5">
-    <div class="alert alert-info" role="alert">
-        <strong>Bağış ekle</strong>
+   <div class="container mt-5">
+        <div class="alert alert-info" role="alert">
+            <strong>Bağış ekle</strong>
+        </div>
+        <form id="commentForm" method="POST" action="{% url 'home' %}">
+            {% csrf_token %}
+            <!-- Kullanıcıyı seçmek için checkboxes -->
+            <div class="mb-3">
+                <label for="group" class="form-label">Hedef kitleyi seç:</label>
+                {% for group in groups %}
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" name="group" value="{{ group.group_name }}" id="group_{{ group.id }}">
+                        <label class="form-check-label" for="group_{{ group.id }}">
+                            {{ group.group_name }}
+                        </label>
+                    </div>
+                {% endfor %}
+            </div>
+
+            <!-- Seçilen grupları göstermek için bir div -->
+            <div id="selectedGroups" class="mb-3"></div>
+
+            <div class="mb-3">
+                <label for="name" class="form-label">Başlık:</label>
+                <input type="text" class="form-control" id="name" name="name" required>
+            </div>
+            <div class="mb-3">
+                <label for="comment" class="form-label">Açıklama:</label>
+                <textarea class="form-control" id="comment" name="comment" rows="3" required></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Gönder</button>
+        </form>
     </div>
-    <form id="commentForm" method="POST" action="{% url 'home' %}">
-        {% csrf_token %}
-        <!-- Kullanıcıyı seçmek için checkboxes -->
-        <div class="mb-3">
-            <label for="group" class="form-label">Hedef kitleyi seç:</label>
-            {% for group in groups %}
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" name="group" value="{{ group.group_name }}" id="group_{{ group.id }}">
-                    <label class="form-check-label" for="group_{{ group.id }}">
-                        {{ group.group_name }}
-                    </label>
-                </div>
-            {% endfor %}
-        </div>
 
-        <!-- Seçilen grupları göstermek için bir div -->
-        <div id="selectedGroups" class="mb-3"></div>
+    <script>
+        // Seçilen grupları göstermek için bir div
+        const selectedGroupsDiv = document.getElementById('selectedGroups');
+        // Grup seçimini dinle
+        const checkboxes = document.querySelectorAll('input[name="group"]');
+        checkboxes.forEach((checkbox) => {
+            checkbox.addEventListener('change', () => {
+                selectedGroupsDiv.innerHTML = '';
+                checkboxes.forEach((checkbox) => {
+                    if (checkbox.checked) {
+                        const groupName = checkbox.value;
+                        selectedGroupsDiv.innerHTML += `<span class="badge bg-primary">${groupName}</span>&nbsp;`;
+                    }
+                });
+            });
+        });
 
-        <div class="mb-3">
-            <label for="name" class="form-label">Başlık:</label>
-            <input type="text" class="form-control" id="name" name="name" required>
-        </div>
-        <div class="mb-3">
-            <label for="comment" class="form-label">Açıklama:</label>
-            <textarea class="form-control" id="comment" name="comment" rows="3" required></textarea>
-        </div>
-        <button type="submit" class="btn btn-primary">Gönder</button>
-    </form>
-</div>
-
-<script>
-    // Seçilen grupları göstermek için bir div
-    const selectedGroupsDiv = document.getElementById('selectedGroups');
-    // Grup seçimini dinle
-    const checkboxes = document.querySelectorAll('input[name="group"]');
-    checkboxes.forEach((checkbox) => {
-        checkbox.addEventListener('change', () => {
-            selectedGroupsDiv.innerHTML = '';
+        // Form gönderildiğinde fazladan seçilen grupları kaldır
+        const commentForm = document.getElementById('commentForm');
+        commentForm.addEventListener('submit', () => {
             checkboxes.forEach((checkbox) => {
-                if (checkbox.checked) {
-                    const groupName = checkbox.value;
-                    selectedGroupsDiv.innerHTML += `<span class="badge bg-primary">${groupName}</span>&nbsp;`;
+                if (!checkbox.checked) {
+                    checkbox.remove();
                 }
             });
         });
-    });
+    </script>
 
-    // Form gönderildiğinde fazladan seçilen grupları kaldır
-    const commentForm = document.getElementById('commentForm');
-    commentForm.addEventListener('submit', () => {
-        checkboxes.forEach((checkbox) => {
-            if (!checkbox.checked) {
-                checkbox.remove();
-            }
-        });
-    });
-</script>
-
-   <!-- Commentler -->
-<div class="container mt-3">
-    <div class="alert alert-warning" role="alert">
-        <strong>Aktif bağış listesi</strong>
+    <!-- Commentler -->
+    <div class="container mt-3">
+        <div class="alert alert-warning" role="alert">
+            <strong>Aktif bağış listesi</strong>
+        </div>
+        {% for comment in comments reversed %}
+            <div class="card mb-3">
+                <div class="card-body">
+                    <p class="card-text"><strong>Başlık:</strong> {{ comment.name }}</p>
+                    <p class="card-text"><strong>Açıklama:</strong> {{ comment.comment }}</p> 
+                    <p class="card-text"><strong>Hedef kitle:</strong> {{ comment.group }}</p>
+                    <p class="card-text"><strong>Tarih:</strong> <small class="text-muted">{{ comment.dateTime }}</small></p>
+                </div>
+            </div>
+        {% endfor %}
     </div>
-    {% for comment in comments reversed %}
-        <div class="card mb-3">
-            <div class="card-body">
-                <p class="card-text"><strong>Başlık:</strong> {{ comment.name }}</p>
-                <p class="card-text"><strong>Açıklama:</strong> {{ comment.comment }}</p> 
-                <p class="card-text"><strong>Hedef kitle:</strong> {{ comment.group }}</p>
-                <p class="card-text"><strong>Tarih:</strong> <small class="text-muted">{{ comment.dateTime }}</small></p>
-               
-        </div>
-        </div>
-    {% endfor %}
-</div>
-
 
    <footer class="bg-dark text-light text-center py-3">
        <div class="container"> 
