--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -33,16 +33,30 @@
     
 </div>
         <div class="container d-flex justify-content-end align-items-center">
-            <a href="profile" class="btn btn-light position-relative" style="background-color: #ffffff; border: 2px solid #ffffff; padding: 8px 10px;">
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 20 20">
-                    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
-                    <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
-                </svg>
-                <span class="navbar-brand text-dark" style="margin-top: 10px;">Profil</span>
-                <span class="position-absolute top-0 start-100 translate-middle p-2 bg-success border border-light rounded-circle">
-                    <span class="visually-hidden">Yeni bildirimler</span>
-                </span>
-            </a>
+            {% if request.user.is_authenticated %}
+                <a class="nav-link" href="#">Logout</a>
+                <a href="profile" class="btn btn-light position-relative" style="background-color: #ffffff; border: 2px solid #ffffff; padding: 8px 10px;">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 20 20">
+                        <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
+                        <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
+                    </svg>
+                    <span class="navbar-brand text-dark" style="margin-top: 10px;">Profil</span>
+                    <span class="position-absolute top-0 start-100 translate-middle p-2 bg-success border border-light rounded-circle">
+                        <span class="visually-hidden">Yeni bildirimler</span>
+                    </span>
+                </a>
+            {% else %}
+                <a href="profile" class="btn btn-light position-relative" style="background-color: #ffffff; border: 2px solid #ffffff; padding: 8px 10px;">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 20 20">
+                        <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
+                        <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
+                    </svg>
+                    <span class="navbar-brand text-dark" style="margin-top: 10px;">Profil</span>
+                    <span class="position-absolute top-0 start-100 translate-middle p-2 bg-success border border-light rounded-circle">
+                        <span class="visually-hidden">Yeni bildirimler</span>
+                    </span>
+                </a>
+            {% endif %}
         </div>
    </nav>
     
